# cocompute

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUP.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HOST-AGREEMENT.md  LICENSE  README.md  TERMS.md  bacon.toml  cocompute.db  cocompute.db-shm  cocompute.db-wal  context.md  justfile
.github/workflows/: auto-tag.yml  release.yml
common/: Cargo.toml
common/src/: key.rs  lib.rs
common/src/helpers/: mod.rs
common/src/protocols/: chat.rs  embeddings.rs  mod.rs  registry.rs
common/tests/: protocol_roundtrip.rs
design/: cocompute.pen  design.pen  flow_diagram.js
host/: Cargo.toml
host/src/: connection.rs  handlers.rs  main.rs  ollama.rs  update.rs
orchestrator/: Cargo.toml  input.css  package-lock.json  package.json
orchestrator/src/: auth.rs  error.rs  host_acceptor.rs  host_manager.rs  lib.rs  main.rs  openai.rs  proxy.rs  signup.rs
orchestrator/src/db/: migration.rs  mod.rs
orchestrator/src/db/entities/: api_keys.rs  beta_invites.rs  host_pool_memberships.rs  host_tokens.rs  hosts.rs  metering_logs.rs  mod.rs  pool_members.rs  pools.rs  users.rs
orchestrator/src/db/migrations/: m20260325_create_api_keys.rs  m20260325_create_hosts.rs  m20260325_create_metering_logs.rs  m20260327_add_api_key_id_to_metering_logs.rs  m20260406_add_total_ms_to_metering_logs.rs  m20260411_000001_create_beta_invites.rs  m20260411_000002_create_users.rs  m20260412_000001_create_pools.rs  m20260412_000002_create_pool_members.rs  m20260412_000003_create_host_tokens.rs  m20260412_000004_create_host_pool_memberships.rs  m20260412_000005_add_user_pool_to_api_keys.rs  m20260412_000006_add_user_to_hosts.rs  m20260412_000007_add_pool_id_to_metering_logs.rs  m20260420_000001_add_name_to_hosts.rs  m20260420_000002_add_is_active.rs  m20260507_000001_add_is_active_to_hosts.rs  mod.rs
orchestrator/src/email/: mod.rs  templates.rs
orchestrator/src/routes/: chat.rs  embeddings.rs  mod.rs  models.rs  stats.rs  system.rs
orchestrator/src/web/: asset_hash.rs  beta.rs  forgot.rs  handlers.rs  landing.rs  login.rs  mod.rs  reset.rs  total_compute.rs  verify.rs
orchestrator/src/web/components/: base.rs  card.rs  check_item.rs  code_block.rs  code_window.rs  feature_card.rs  icon.rs  mod.rs  page_shell.rs  text_input.rs
orchestrator/src/web/handlers/: api_keys.rs  beta.rs  forgot.rs  host_tokens.rs  login.rs  logout.rs  mod.rs  pools.rs  reset.rs  signup.rs  verify.rs
orchestrator/src/web/pages/: beta.rs  dashboard.rs  forgot.rs  landing.rs  login.rs  mod.rs  quickstart.rs  reset.rs  signup.rs  verify.rs
orchestrator/static/: code-copy.js  install.sh  network-anim.js
orchestrator/tests/: integration_beta.rs  integration_landing.rs  integration_pools.rs  integration_signup.rs  integration_v1.rs
orchestrator/tests/common/: mod.rs
stress-test/: Cargo.toml
stress-test/src/: main.rs
