[workspace]
resolver = "3"
members = ["common", "host", "orchestrator"]

[workspace.package]
version = "0.5.2"

[workspace.dependencies]
anyhow = "1.0"
iroh = "0.97.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal"] }

[profile.release]
strip = true
lto = true
