[workspace]
resolver = "3"
members = ["common", "host", "orchestrator", "stress-test"]

[workspace.package]
version = "0.7.1"
repository = "https://github.com/dsegovia90/cocompute"
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0"
iroh = "0.97.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal"] }

[profile.release]
strip = true
lto = true
