[package]
name = "cocompute_host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.6.0", features = ["derive", "env"] }
common = { path = "../common/" }
iroh = { workspace = true }
ollama-rs = "0.3.4"
rand = "0.9"
tokio = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
