[package]
name = "cocompute_host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.6.0", features = ["derive", "env"] }
common = { path = "../common/" }
iroh = { workspace = true }
ollama-rs = { version = "0.3.4", features = ["stream"] }
rand = "0.9"
tokio = { workspace = true }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
