[package]
name = "cocompute_host"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[features]
openssl-vendored = ["dep:openssl"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = true }
anyhow = { workspace = true }
clap = { version = "4.6.0", features = ["derive", "env"] }
dirs = "6"
common = { path = "../common/" }
iroh = { workspace = true }
ollama-rs = { version = "0.3.4", features = ["stream"] }
rand = "0.9"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
tokio = { workspace = true }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
exec = "0.3.1"
semver = "1.0.27"
schemars = "1.2.1"
