[package]
name = "cocompute_orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
common = { path = "../common/" }
iroh = { workspace = true }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.19"
serde = { workspace = true }
serde_json = "1.0.149"
tokio = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
