[package]
name = "cocompute_orchestrator"
version.workspace = true
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive", "env"] }
common = { path = "../common/" }
futures = "0.3.32"
hex = "0.4.3"
iroh = { workspace = true }
rand = "0.9"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.19"
serde = { workspace = true }
serde_json = "1.0.149"
sha2 = "0.10"
tokio = { workspace = true }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
