[package]
name = "cocompute_orchestrator"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
argon2 = "0.5"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie-signed"] }
chrono = "0.4.44"
fake = { version = "5", features = ["derive"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
common = { path = "../common/" }
futures = "0.3.32"
hex = "0.4.3"
iroh = { workspace = true }
leptos = { version = "0.8", features = ["ssr"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
rand = "0.9"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.19"
serde = { workspace = true }
serde_json = "1.0.149"
sha2 = "0.10"
time = "0.3"
tokio = { workspace = true }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["trace", "fs"] }
tracing = "0.1.44"
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
reqwest = { version = "0.13.2", features = ["json"] }
urlencoding = "2.1"
tower_governor = "0.8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
