[package]
name = "stress-test"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[[bin]]
name = "stress-test"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6", features = ["derive", "env"] }
csv = "1.3"
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true, features = ["full"] }
